# tomlconfigurer

./: .gitignore  README.md  pyproject.toml  setup.py
.github/workflows/: lint.yml  publish-pypi.yml  publish-testpypi.yml
src/configurer/: __init__.py
