[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "tomlconfigurer"
version = "0.1.0"
authors = [{ name = "xystudio", email = "173288240@qq.com" }]
description = "A configurer with toml."
readme = { file = "README.md", content-type = "text/markdown" }
requires-python = ">=3.8"
license = { file = "LICENSE" }
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = []
keywords = ["config", "toml", "configure", "configurer"]
[project.optional-dependencies]
dev = []
[project.scripts]
tomlconfigurer = "configurer:main"
[tool.setuptools.package-dir]
configurer = "src/configurer"
